syntax = "proto3";

option csharp_namespace = "network.stream";

package network.stream;

import "common.proto";
import "types.proto";

message Stream_ConnectRes {
    network.types.StatusCode err = 1;
}

message Stream_Disconnected {
    network.types.StatusCode err = 1;
}

message Stream_UserConnect {
    network.common.UserInfo connect_user = 1;
}

message Stream_MessageSend {
    string message = 1;
}

message Stream_MessageRecv {
    int32 user_index = 1;
    string nickname = 2;
    string message = 3;
}