syntax = "proto3";

option csharp_namespace = "Network.Unary";

package network.unary;

import "common.proto";
import "types.proto";

// Command
message Unary_CommandReq {
    string command = 1;
}

message Unary_CommandRes {
    network.types.StatusCode result = 1;
    string cmd_res = 2;
}